--- a/quiz.css
+++ b/quiz.css
@@ -7,6 +7,7 @@ font-family:'Times New Roman', Times, serif;
 body
 {
     background-image: url(fundo.jpg);
+    backgound-repeat: no-repeat;
     background-attachment: fixed;
 
 }
